//
//  Endpoint.swift
//  DecoupledNetworking
//
//  Created by Alex on 17/01/2020.
//  Copyright © 2020 tonezone6. All rights reserved.
//

import Foundation

enum Constants {
    enum Titles: String {
        case comments = "Comments"
        case details = "Details"
    }
}

